# LumaK

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  main.py  pyproject.toml
.skills/code-review.md/: SKILL.md  _meta.json
.skills/summarize-1.0.0/: _meta.json
agent/: __init__.py  config.py
agent/CLI/: app.py
agent/LLM/: anthropic_provider.py  client.py  deepseek.py  minimax.py  openai_compatible.py
agent/analysis/: index.py  python_ast.py
agent/memory/: __init__.py  store.py
agent/prompts/: system.md
agent/runtime/: hooks.py  loop.py  model.py  rollback.py  session.py  tools.py
agent/skills/: __init__.py  prompt.py  selector.py  (+1 more)
docs/: 01-project-direction.md  02-scope-architecture.md  03-seven-day-plan.md  04-anti-toy-checklist.md  05-delivery-roadmap.md
evals/: markdown-rendering-analysis.md  markdown-rendering.md  session-history-pollution.md  tasks.md
gateway/: app.py  events.py  llm.py  state.py  todo.py  trace_reader.py
lumak/: __init__.py  cli.py
shared/: gateway-contract.d.ts  gateway-contract.js
tests/: test_agent.py  test_agent_loop.py  test_cli.py  test_code_analysis.py  test_filesystem_tools.py  test_gateway.py  test_gateway_llm.py  test_gateway_state.py  test_hooks.py  test_llm_client.py  test_llm_config.py  test_llm_providers.py  test_memory.py  test_registry.py  test_runtime_model.py  test_runtime_session.py  test_runtime_tools.py  test_skills.py  test_todo.py
tui/: package-lock.json  package.json  tsconfig.json
web/: index.html  package-lock.json  package.json  styles.css  tsconfig.json
(+31 files in other folders)
