[project]
name = "lumak"
version = "0.1.0"
description = "A local codebase understanding and safe-editing agent runtime."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.104.1",
    "dotenv>=0.9.9",
    "openai>=2.8.1",
    "websockets>=15.0.1",
]

[project.scripts]
lumak = "lumak.cli:main"
lumak-gateway = "gateway.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["agent*", "gateway*", "lumak*"]

[tool.setuptools.data-files]
"share/lumak/tui/dist" = [
    "tui/dist/app-utils.js",
    "tui/dist/index.js",
]
"share/lumak/web/dist" = [
    "web/dist/index.html",
]
"share/lumak/web/dist/assets" = [
    "web/dist/assets/*",
]
